package com.bigboxcode.designpattern.bridge.transport;

public interface Seat {

    void selectSeat();
}
